Fix component alignment and replace React logo with Mayflower logo

--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,32 @@
 .App {
-
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  /*animation: App-logo-spin infinite 20s linear;*/
+  height: 40px;
 }
 
 .App-header {
   background-color: #148eca;
-  height: 80px;
-  padding: 20px;
+  text-align: center;
+  height: 100px;
+  width: 100%;
+  padding: 30px;
   color: white;
 }
 
 .App-intro {
   font-size: large;
+}
+
+.App-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 70%;
 }
 
 @keyframes App-logo-spin {
@@ -29,7 +38,6 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  width: 1200px;
   padding-left: 50px;
   padding-right: 50px;
   padding-top: 20px;
